// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a parser rule 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "parser": Object {
          "amd": false,
          "browserify": false,
          "requireEnsure": false,
          "requireInclude": false,
          "requireJs": false,
          "system": false,
        },
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
}
`;

exports[`should work with other rules 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "parser": Object {
          "amd": false,
          "browserify": false,
          "requireEnsure": false,
          "requireInclude": false,
          "requireJs": false,
          "system": false,
        },
      },
      Object {
        "test": /\\^\\.\\*\\\\\\.styl\\$/,
        "use": Array [
          Object {
            "loader": "extract-loader",
            "options": Object {},
          },
          Object {
            "loader": "css-loader",
            "options": Object {},
          },
          Object {
            "loader": "stylus-loader",
            "options": Object {
              "compress": true,
              "disable-cache": true,
              "preferPathResolver": "webpack",
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
}
`;
